src/test/ui/compile-fail-migration/const-typeid-of.stderr
error: `std::any::TypeId::of` is not yet stable as a const fn
  --> $DIR/const-typeid-of.rs:16:26
   |
LL |     const A_ID: TypeId = TypeId::of::<A>();
   |                          ^^^^^^^^^^^^^^^^^
   |
   = help: in Nightly builds, add `#![feature(const_type_id)]` to the crate attributes to enable

error: aborting due to previous error

